Remove superfluous nested contexts